--- a/index.html
+++ b/index.html
@@ -3,26 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/ac8b73b4cf.js" crossorigin="anonymous"></script>
     <title>Fabian Siauw - CV</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            margin: 20px;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background: linear-gradient(to right, #4CAF50, #2E7D32);
+            color: #ffffff;
+            line-height: 1.6;
         }
 
         header {
             text-align: center;
-            padding: 20px;
-            background-color: #333;
+            padding: 50px 0;
+            background: linear-gradient(to right, #388E3C, #1B5E20);
             color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        section {
-            margin-bottom: 20px;
+        h1, p1 {
+            margin: 0;
+        }
+
+        h1 {
+            font-size: 2em;
+        }
+
+        p1 {
+            font-size: 1.2em;
         }
 
         h2, h3 {
-            color: #333;
+            color: #4CAF50;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.1em;
+            margin-top: 5px;
+            color: black;
+        }
+
+        section {
+            padding: 30px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin: 20px;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        section:hover {
+            transform: scale(1.02);
         }
 
         ul {
@@ -33,20 +68,54 @@
 
         li {
             margin-bottom: 8px;
+            color: black;
         }
 
         section h2 {
-            border-bottom: 2px solid #333;
+            border-bottom: 2px solid #4CAF50;
             padding-bottom: 10px;
             margin-bottom: 20px;
         }
 
-        section p {
-            margin: 10px 0;
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
-        h1{
-            color: white;
+        .column {
+            flex: 0 0 48%;
+            margin-bottom: 20px;
+        }
+
+        @media (max-width: 768px) {
+            .column {
+                flex: 0 0 100%;
+            }
+        }
+
+        .social-icons {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+        }
+
+        .social-icons a {
+            margin: 0 10px;
+            color: #ffffff;
+            text-decoration: none;
+            font-size: 1.5em;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .social-icons a:hover {
+            transform: scale(1.2);
+        }
+
+        .social-icons i {
+            font-size: 2em;
         }
     </style>
 </head>
@@ -54,40 +123,58 @@
 
 <header>
     <h1>Fabian Siauw</h1>
-    <p>Web Developer | Photographer | Barista</p>
+    <p1>Web Developer | Photographer | Barista</p1>
+
+    <div class="social-icons">
+        <a href="https://www.instagram.com/fabian_siauw?igsh=OGQ5ZDc2ODk2ZA==" target="_blank"><i class="fa-brands fa-instagram"></i></i></a>
+        <a href="https://github.com/fabian6262" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+    </div>
 </header>
 
-<section>
-    <h2>Skills</h2>
-    <ul>
-        <li>Apps Development</li>
-        <li>Web Development</li>
-        <li>Coffee making/Barista</li>
-        <li>Photography</li>
-        <li>Videography</li>
-        <li>Editing</li>
-        <li>MikroTik configuration</li>
-        <li>Semi Professional Cyclist</li>
-    </ul>
-</section>
+<div class="container">
 
-<section>
-    <h2>Contact</h2>
-    <p>Email: fabiansiauw07@gmail.com</p>
-    <p>Phone: +6282373059198</p>
-</section>
+    <div class="column">
+        <section>
+            <h2>Skills</h2>
+            <ul>
+                <li>Apps Development</li>
+                <li>Web Development</li>
+                <li>Coffee making/Barista</li>
+                <li>Photography</li>
+                <li>Videography</li>
+                <li>Editing</li>
+                <li>MikroTik configuration</li>
+                <li>Semi Professional Cyclist</li>
+            </ul>
+        </section>
+    </div>
 
-<section>
-    <h2>Experience</h2>
-    <p>Participant in the 2023 Unsri Web Development Competition</p>
-    <p>Participant in the 2023 Osbanas Informatika Competition</p>
-    <p>Participant in the 2023 Photo Creature Estechmedia</p>
-</section>
+    <div class="column">
+        <section>
+            <h2>Contact</h2>
+            <p>Email: fabiansiauw07@gmail.com</p>
+            <p>Phone: +6282373059198</p>
+        </section>
+    </div>
 
-<section>
-    <h2>Hobbies</h2>
-    <p>Cycling, Photography, Videography, Coding, Drone Aerial Photography</p>
-</section>
+    <div class="column">
+        <section>
+            <h2>Experience</h2>
+            <p>Participant in the 2023 Unsri Web Development Competition</p>
+            <p>Participant in the 2023 Osbanas Informatika Competition</p>
+            <p>Participant in the 2023 Photo Creature Estechmedia</p>
+        </section>
+    </div>
+
+    <div class="column">
+        <section>
+            <h2>Hobbies</h2>
+            <p>Cycling, Photography, Videography, Coding, Drone Aerial Photography</p>
+        </section>
+    </div>
+
+</div>
 
 </body>
 </html>
